# cargo-unc

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: test.yml
cargo-unc/: Cargo.toml
cargo-unc/src/: lib.rs  main.rs
cargo-unc/src/commands/: mod.rs
cargo-unc/src/commands/abi_command/: abi.rs  mod.rs
cargo-unc/src/commands/build_command/: build.rs  mod.rs
cargo-unc/src/commands/create_dev_account/: mod.rs  use_random_account_id.rs
cargo-unc/src/commands/deploy/: mod.rs
cargo-unc/src/commands/new/: mod.rs
cargo-unc/src/commands/new/new-project-template/: Cargo.toml.template  README.md
cargo-unc/src/commands/new/new-project-template/.github/workflows/: deploy-production.yml  deploy-staging.yml  undeploy-staging.yml
cargo-unc/src/util/: mod.rs
cargo-unc/wix/: main.wxs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/templates/negative/: _Cargo_old_sdk.toml
integration-tests/tests/: util.rs
integration-tests/tests/abi/: borsh_schema.rs  callbacks.rs  e2e.rs  json_schema.rs  modifiers.rs  negative.rs  opts.rs  result.rs
integration-tests/tests/cargo/: mod.rs
